--- a/DnDBasic/package.json
+++ b/DnDBasic/package.json
@@ -10,9 +10,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "vue": "^2.0.1",
-    "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
-    "vuelidate": "^0.7.4"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
